# MetroVision-MLOps

./: .api-keys.example  .dockerignore  .editorconfig  .env.example  .gitignore  .pip-audit-ignore  .pre-commit-config.yaml  .trivyignore  CONTRIBUTING.md  LICENSE  README.md  app.py  docker-compose.yml  metroChallenge.py  myMetroProcessing.py  pyproject.toml  requirements.txt  train_cnn.py  train_knn_scaler.py  train_params_hough.py
.github/workflows/: ci.yml  docker-publish.yml  security.yml  zap-baseline.yml
api/: auth.py  logging_config.py  main.py  middleware.py  model_manager.py  rate_limit.py  safe_loader.py  schemas.py  tracing.py
api/routes/: __init__.py  drift.py  health.py  metrics.py  predict.py  version.py
docker/: Dockerfile.api  Dockerfile.mlflow
docs/: security-roadmap.md
k8s/base/: configmap.yaml  cronjob-backup.yaml  deployment.yaml  external-secret.yaml  falco.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
k8s/overlays/minikube/: dev-secrets.yaml  kustomization.yaml  service-nodeport.yaml
k8s/overlays/openshift/: kustomization.yaml  route.yaml
mlflow_pipelines/: config.py  convert_to_safe.py  register_baseline.py  train_cnn_mlflow.py  train_knn_mlflow.py
model/: knn.npz  knn_line_model.joblib  manifest.json  scaler.npz  scaler_line.joblib
monitoring/: alerts.yml  mlflow_basic_auth.ini  prometheus.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/drift/: drift_report.py
monitoring/grafana/dashboards/: metrovision-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: tempo.yml
monitoring/loki/: loki-config.yaml
monitoring/promtail/: promtail-config.yaml
monitoring/tempo/: tempo-config.yaml
tests/: conftest.py  test_adversarial.py  test_api_auth.py  test_api_drift.py  test_api_health.py  test_api_predict.py  test_api_security.py  test_drift_report.py  test_mlflow_config.py  test_model_integrity.py  test_smoke.py
