[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "mlflow_pipelines*", "monitoring*"]

[project]
name = "metrovision-mlops"
version = "0.1.0"
description = "Production-grade MLOps pipeline for Paris Metro pictogram detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Louis Lenouvel", email = "louis.lenouvel@example.com"},
]
keywords = ["mlops", "computer-vision", "metro", "deep-learning", "kubernetes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.1,<3",
    "opencv-python>=4.11,<5",
    "scikit-image>=0.25,<1",
    "scikit-learn>=1.7,<2",
    "tensorflow>=2.21,<3",
    "keras>=3.12,<4",
    "matplotlib>=3.10,<4",
    "pandas>=2.3,<3",
    "joblib>=1.5,<2",
    "pillow>=11.2,<12",
    "scipy>=1.15,<2",
    "h5py>=3.14,<4",
    "gradio>=5,<6",
    "mlflow>=2.22,<3",
    "evidently>=0.4,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "python-multipart>=0.0.20,<1",
    "prometheus-client>=0.22,<1",
    "slowapi>=0.1.9,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11,<1",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "pre-commit>=4,<5",
    "mypy>=1.15,<2",
]

[project.urls]
Repository = "https://github.com/LenouvelLouis/MetroVision-MLOps"

# ── Ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "myMetroProcessing.py",
    "train_cnn.py",
    "train_knn_scaler.py",
    "evaluationV2.py",
    "metroChallenge.py",
    "app.py",
    "test.py",
    "train_params_hough.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["api", "mlflow_pipelines"]

# ── Pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

# ── Mypy ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
